--- a/public/pages/status.html
+++ b/public/pages/status.html
@@ -156,21 +156,25 @@
 <div class="govuk-grid-column-two-thirds">
 <h1 class="govuk-heading-xl">Your immigration status (eVisa)</h1>
 <div class="govuk-grid-row">
-<div class="status-border remove-border clearfix">
-<div class="govuk-grid-column-two-thirds">
-<dl class="govuk-summary-list">
-<div class="govuk-summary-list__row">
-<img alt="Your photo" id="user-photo" src="assets/images/placeholder.png" 
-     class="govuk-grid-column-full" 
-     style="max-width: 160px; height: auto; display: block; margin-bottom: 20px;">
-<div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">Name</dt>
-    <dd class="govuk-summary-list__value" id="user-name">ANATOLIE CHIRIAC</dd>
-</div>
+  <div class="govuk-grid-column-two-thirds">
+    <dl class="govuk-summary-list">
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">Name</dt>
+        <dd class="govuk-summary-list__value" id="user-name">ANATOLIE CHIRIAC</dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">Date of birth</dt>
+        <dd class="govuk-summary-list__value" id="user-dob">4 November 1998</dd>
+      </div>
+    </dl>
+  </div>
 
-<div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">Date of birth</dt>
-    <dd class="govuk-summary-list__value" id="user-dob">4 November 1998</dd>
+  <div class="govuk-grid-column-one-third">
+    <div style="border: 5px solid #f3f2f1; padding: 0; outline: 1px solid #b1b4b6;">
+      <img alt="Your photo" id="user-photo" src="assets/images/placeholder.png" 
+           style="width: 100%; display: block; height: auto;">
+    </div>
+  </div>
 </div>
 <script>
   fetch('/api/user-data').then(res => res.json()).then(data => {
