--- a/public/pages/status.html
+++ b/public/pages/status.html
@@ -159,21 +159,23 @@
 <div class="status-border remove-border clearfix">
 <div class="govuk-grid-column-two-thirds">
 <dl class="govuk-summary-list">
-<div class="govuk-summary-list__row">
-<dt class="govuk-summary-list__key">Name</dt>
-<dd class="govuk-summary-list__value">ANATOLIE CHIRIAC</dd>
-</div>
-<div class="govuk-summary-list__row">
-<dt class="govuk-summary-list__key">Date of birth</dt>
-<dd class="govuk-summary-list__value">4 November 1998</dd>
-</div>
-<div class="govuk-summary-list__row">
-<dt class="govuk-summary-list__key">Nationality</dt>
-<dd class="govuk-summary-list__value">ROU</dd>
-</div>
-<div class="govuk-summary-list__row">
-<dt class="govuk-summary-list__key">Status</dt>
-<dd class="govuk-summary-list__value">Settled status, also known as indefinite leave to remain</dd>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">Name</dt>
+    <dd class="govuk-summary-list__value" id="user-name">ANATOLIE CHIRIAC</dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">Date of birth</dt>
+    <dd class="govuk-summary-list__value" id="user-dob">4 November 1998</dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">Nationality</dt>
+    <dd class="govuk-summary-list__value">ROU</dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">Status</dt>
+    <dd class="govuk-summary-list__value">Settled status, also known as indefinite leave to remain</dd>
+  </div>
+</dl>
 </div>
 </dl>
 <div>
