--- a/public/pages/status.html
+++ b/public/pages/status.html
@@ -185,7 +185,9 @@
 <p class="govuk-body">
               If you need to prove your immigration status to someone, you can do this online with a share code.
             </p>
-<a class="govuk-button" href="https://view-immigration-status.service.gov.uk/get-share-code">Get a share code</a>
+<form method="post" action="/get-share-code">
+  <button class="govuk-button">Get a share code</button>
+</form>
 </div>
 <div class="govuk-grid-column-one-third">
 <div class="placeholder-img" id="image-container">
