--- a/public/pages/details-employer.html
+++ b/public/pages/details-employer.html
@@ -146,7 +146,7 @@
 </nav>
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
 <div class="govuk-grid-row" id="gov-grid-row-content"><div class="govuk-grid-column-two-thirds">
-<h1 class="govuk-!-display-none">Details to give your employer</h1>
+<h1 class="govuk-!-display-none">Details you need to share</h1>
 <form action="" autocomplete="off" method="POST" novalidate="true" spellcheck="false">
 <h1 class="govuk-heading-l">Details to give your employer</h1>
 <h2 class="govuk-heading-m">Share code</h2>
