--- a/public/pages/details-employer.html
+++ b/public/pages/details-employer.html
@@ -177,7 +177,7 @@
 <ol class="govuk-list govuk-!-static-margin-bottom-8 rtwr-number-list">
 <li class="number-list-group">
 <span class="rtwr-circle">1</span>Give the share code and your date of birth to the
-            person you want to prove your right to work to.
+            person you want to prove your status too.
         </li>
 <li>
 <span class="rtwr-circle">2</span>
