--- a/public/pages/view-your-status.html
+++ b/public/pages/view-your-status.html
@@ -192,7 +192,9 @@
 
                     <div class="govuk-grid-row govuk-!-margin-top-9">
                         <div class="govuk-column-two-thirds">
-                            <form action="/get-share-code" method="POST">
+                            <form method="post" action="/details-employer">
+  <button class="govuk-button" data-module="govuk-button">Get a share code</button>
+</form>
                                 <button type="submit" class="govuk-button" data-module="govuk-button">Create a share code</button>
                             </form>
                         </div>
